# xthreejs

./: .gitignore  CMakeLists.txt
examples/: Animation.ipynb  BufferAttributes and BufferGeometry.ipynb  Combined Camera.ipynb  Examples.ipynb  Geometries.ipynb  GeometryVertices.ipynb  Shaders.ipynb  Shadows.ipynb  Textures.ipynb  Untitled.ipynb  Untitled1.ipynb  renderer_limit.ipynb  superellipsoid.ipynb
include/xthreejs/: xanimation.hpp  xaudio.hpp  xbase.hpp  xcameras.hpp  xcontrols.hpp  xcore.hpp  xextras.hpp  xgeometries.hpp  xhelpers.hpp  xlights.hpp  xloaders.hpp  xmaterials.hpp  xmath.hpp  xobjects.hpp  xrenderers.hpp  xscenes.hpp  xsrc.hpp  xtextures.hpp  xthreejs.hpp  xthreejs_config.hpp.in
src/: xthreejs.cpp
src/animation/: xanimation_action.cpp  xanimation_action_autogen.cpp  xanimation_clip_autogen.cpp  xanimation_mixer_autogen.cpp  xanimation_object_group_autogen.cpp  xanimation_utils_autogen.cpp  xkeyframe_track_autogen.cpp  xproperty_binding_autogen.cpp  xproperty_mixer_autogen.cpp
src/audio/: xaudio_analyser_autogen.cpp  xaudio_autogen.cpp  xaudio_listener_autogen.cpp  xpositional_audio_autogen.cpp
src/base/: xrender.cpp
src/cameras/: xarray_camera_autogen.cpp  xcamera_autogen.cpp  xcombined_camera_autogen.cpp  xcube_camera_autogen.cpp  xorthographic_camera_autogen.cpp  xperspective_camera_autogen.cpp  xstereo_camera_autogen.cpp
src/controls/: xcontrols_autogen.cpp  xfly_controls_autogen.cpp  xorbit_controls_autogen.cpp  xpicker_autogen.cpp  xtrackball_controls_autogen.cpp
src/core/: xbase_buffer_geometry_autogen.cpp  xbase_geometry_autogen.cpp  xbuffer_attribute_autogen.cpp  xbuffer_geometry_autogen.cpp  xclock_autogen.cpp  xdirect_geometry_autogen.cpp  xevent_dispatcher_autogen.cpp  xgeometry_autogen.cpp  xinstanced_buffer_attribute_autogen.cpp  xinstanced_buffer_geometry_autogen.cpp  xinstanced_interleaved_buffer_autogen.cpp  xinterleaved_buffer_attribute_autogen.cpp  xinterleaved_buffer_autogen.cpp  xlayers_autogen.cpp  xobject3d.cpp  xobject3d_autogen.cpp  xraycaster_autogen.cpp  xrenderer.cpp  xuniform_autogen.cpp
src/extras/: xscene_utils_autogen.cpp  xshape_utils_autogen.cpp
src/geometries/: xbox_buffer_geometry_autogen.cpp  xbox_geometry_autogen.cpp  xcircle_buffer_geometry_autogen.cpp  xcircle_geometry_autogen.cpp  xcone_geometry_autogen.cpp  xcylinder_buffer_geometry_autogen.cpp  xcylinder_geometry_autogen.cpp  xdodecahedron_geometry_autogen.cpp  xedges_geometry_autogen.cpp  xextrude_geometry_autogen.cpp  xicosahedron_geometry_autogen.cpp  xlathe_buffer_geometry_autogen.cpp  xlathe_geometry_autogen.cpp  xoctahedron_geometry_autogen.cpp  xparametric_geometry_autogen.cpp  xplane_buffer_geometry_autogen.cpp  xplane_geometry_autogen.cpp  xpolyhedron_geometry_autogen.cpp  xring_buffer_geometry_autogen.cpp  xring_geometry_autogen.cpp  xshape_geometry_autogen.cpp  xsphere_buffer_geometry_autogen.cpp  xsphere_geometry_autogen.cpp  xtetrahedron_geometry_autogen.cpp  xtext_geometry_autogen.cpp  xtorus_buffer_geometry_autogen.cpp  xtorus_geometry_autogen.cpp  xtorus_knot_buffer_geometry_autogen.cpp  xtorus_knot_geometry_autogen.cpp  xtube_geometry_autogen.cpp  xwireframe_geometry_autogen.cpp
src/helpers/: xarrow_helper_autogen.cpp  xaxes_helper_autogen.cpp  xbox3helper_autogen.cpp  xbox_helper_autogen.cpp  xcamera_helper_autogen.cpp  xdirectional_light_helper_autogen.cpp  xface_normals_helper_autogen.cpp  xgrid_helper_autogen.cpp  xhemisphere_light_helper_autogen.cpp  xplane_helper_autogen.cpp  xpoint_light_helper_autogen.cpp  xpolar_grid_helper_autogen.cpp  xrect_area_light_helper_autogen.cpp  xskeleton_helper_autogen.cpp  xspot_light_helper_autogen.cpp  xvertex_normals_helper_autogen.cpp
src/lights/: xambient_light_autogen.cpp  xdirectional_light_autogen.cpp  xdirectional_light_shadow_autogen.cpp  xhemisphere_light_autogen.cpp  xlight_autogen.cpp  xlight_shadow_autogen.cpp  xpoint_light_autogen.cpp  xrect_area_light_autogen.cpp  xspot_light_autogen.cpp  xspot_light_shadow_autogen.cpp
src/loaders/: xanimation_loader_autogen.cpp  xaudio_loader_autogen.cpp  xbuffer_geometry_loader_autogen.cpp  xcache_autogen.cpp  xcompressed_texture_loader_autogen.cpp  xcube_texture_loader_autogen.cpp  xdata_texture_loader_autogen.cpp  xfile_loader_autogen.cpp  xfont_loader_autogen.cpp  ximage_bitmap_loader_autogen.cpp  ximage_loader_autogen.cpp  xj_s_o_n_loader_autogen.cpp  xloader_autogen.cpp  xloading_manager_autogen.cpp  xmaterial_loader_autogen.cpp  xobject_loader_autogen.cpp  xtexture_loader_autogen.cpp
src/materials/: xline_basic_material_autogen.cpp  xline_dashed_material_autogen.cpp  xmaterial_autogen.cpp  xmesh_basic_material_autogen.cpp  xmesh_depth_material_autogen.cpp  xmesh_lambert_material_autogen.cpp  xmesh_normal_material_autogen.cpp  xmesh_phong_material_autogen.cpp  xmesh_physical_material_autogen.cpp  xmesh_standard_material_autogen.cpp  xmesh_toon_material_autogen.cpp  xpoints_material_autogen.cpp  xraw_shader_material_autogen.cpp  xshader_material_autogen.cpp  xshadow_material_autogen.cpp  xsprite_material_autogen.cpp
src/math/: xbox2_autogen.cpp  xbox3_autogen.cpp  xcylindrical_autogen.cpp  xfrustum_autogen.cpp  xinterpolant_autogen.cpp  xline3_autogen.cpp  xmath_autogen.cpp  xplane_autogen.cpp  xquaternion_autogen.cpp  xray_autogen.cpp  xsphere_autogen.cpp  xspherical_autogen.cpp  xtriangle_autogen.cpp
src/objects/: xblackbox_autogen.cpp  xbone_autogen.cpp  xclone_array_autogen.cpp  xgroup_autogen.cpp  xl_o_d_autogen.cpp  xlens_flare_autogen.cpp  xline_autogen.cpp  xline_loop_autogen.cpp  xline_segments_autogen.cpp  xmesh_autogen.cpp  xpoints_autogen.cpp  xskeleton_autogen.cpp  xskinned_mesh_autogen.cpp  xsprite_autogen.cpp
src/renderers/: xwebgl_render_target_autogen.cpp  xwebgl_render_target_cube_autogen.cpp
src/scenes/: xfog_autogen.cpp  xfog_exp2_autogen.cpp  xscene_autogen.cpp
src/textures/: xcompressed_texture_autogen.cpp  xcube_texture_autogen.cpp  xdata_texture_autogen.cpp  xdepth_texture_autogen.cpp  ximage_texture_autogen.cpp  xtext_texture_autogen.cpp  xtexture_autogen.cpp  xvideo_texture_autogen.cpp
(+265 files in other folders)
